[settings] jeddict.json in the default system settings directory #205  (#206)
* initial revision

* Implemented US #205 - [settings] jeddict.json in the default system settings directory
Now the config file jeddict.json is stored in the system's standard location for 
setting files. It also migrate the existing jeddict.json in user home to the
new location.

* merged maven.yml from main

* reverted and made is the same as upsream/main

* splitting jeddict.json into jeddict-config.json and jeddict-stats.json

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* trying to fix path issue on windows

* Draft checking to create an hook that runs at each module reload

---------

Co-authored-by: Stefano Fornari <ste@macbook-2.homenet.telecomitalia.it>